optional1_fix_tests